--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "build": "node src/index.js"
   },
+  "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "eslint": "^9.18.0",
