--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "start": "live-server dist",
     "test": "vitest",
+    "test:coverage": "vitest --coverage",
     "lint": "eslint .",
     "build": "node build.js"
   },
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@vitest/coverage-v8": "^3.0.5",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
-    "vitest": "^3.0.4"
+    "vitest": "^3.0.5"
   },
   "dependencies": {
     "acorn": "^8.14.0",
